[project]
name = "ladon"
version = "0.0.1"
description = "A resilient, extensible web crawling framework."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-or-later"}  # Upgraded to Affero GPL v3 or later

dependencies = [
    # Core runtime dependencies will be added here later
]

[project.urls]
Repository = "https://github.com/moonyfringers/ladon"
Issues = "https://github.com/moonyfringers/ladon/issues"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

# ----------------------------------------
# BLACK
# ----------------------------------------
[tool.black]
line-length = 80
target-version = ['py312']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
# As this is 'extend', we already exclude everything in .gitignore.
^/(
  (
    resources
  )/
)
'''

# ----------------------------------------
# ISORT
# ----------------------------------------
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
extend_skip_glob = ["resources/*"]

# ----------------------------------------
# RUFF
# ----------------------------------------
[tool.ruff]
line-length = 80
select = ["E", "F", "W", "B"]
ignore = [
    "E501"  # Handled by Black
]
respect-gitignore = true
extend-exclude = [
    "resources/*"
]

# ----------------------------------------
# PYRIGHT
# ----------------------------------------
[tool.pyright]
typeCheckingMode = "strict"
venvPath = ".."
venv = ".venv"
include = ["src", "tests"]
extraPaths = ["src"]

# ----------------------------------------
# PYTEST
# ----------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
